--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -6,8 +6,7 @@ ARG uid
 
 RUN apt update
 RUN apt install -y git rake build-essential
-RUN gem install mocha
-RUN gem install fluent-plugin-amqp2
+RUN gem install mocha fluent-plugin-amqp2
 
 RUN useradd -G www-data,root -u $uid -d /home/$user $user
 RUN mkdir /code
