--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -20,6 +20,7 @@ jobs:
 
   build:
     name: Build + Publish
+    needs: test
     if: github.ref == 'refs/heads/master'    
     runs-on: ubuntu-latest
     permissions:
