--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -13,7 +13,7 @@ jobs:
         ruby-version: 2.6
 
     - name: Install plugins
-      run: gem install mocha fluent-plugin-amqp2
+      run: gem install mocha
 
     - name: Run tests
       run: ruby test/out_amqp.rb
